--- a/01 - Introdução/style.css
+++ b/01 - Introdução/style.css
@@ -11,9 +11,6 @@ body, p, a {
   margin: 0 auto 72px;
 }
 
-#hero {
-}
-
 #hero img {
   margin-bottom: 72px;
 }
@@ -31,7 +28,7 @@ h1 span {
   font-weight: bold;
 }
 
-p {
+p, #footer {
   font-size: 14px;
   line-height: 28px;
 }
@@ -40,6 +37,24 @@ span, a {
   color: #FF9900
 }
 
+#footer {
+  margin-bottom: 32;
+}
+
 #footer a + a{
   margin-left: 28px;
+}
+
+#line {
+  width: 568px;
+  height: 0;
+
+  margin: 0 auto 8px;
+  border: 1px solid #ECEFF2;
+}
+
+#balls {
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
