--- a/treineme/style.css
+++ b/treineme/style.css
@@ -65,7 +65,23 @@ section, p {
 button {
   text-transform: uppercase;
   color: #F9F9F9;
-  font-family: "Open Sans", sans-serif
+  font-family: "Open Sans", sans-serif;
+
+  background: #69B99D;
+  padding: 14px 32px 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #65cfaa;
 }
 
 footer {
