--- a/treineme/style.css
+++ b/treineme/style.css
@@ -1,12 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif
+  font-family: "Open Sans", sans-serif;
+
+  min-height: 100vh;
+
+  background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
 }
 
 .page {
   width: 1000px;
-  margin: 65px auto 0;
+  margin: 0px auto 0; 
+  padding-top: 65px;
 }
 
 .page nav {
@@ -94,4 +99,10 @@ footer {
 
 footer a {
   font-weight: bold;
+}
+
+#balls {
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
