--- a/treineme/style.css
+++ b/treineme/style.css
@@ -45,6 +45,10 @@ ul {
   padding: 0;
 }
 
+ul li a {
+  opacity: 0.5
+}
+
 main {
   display: flex;
   align-items: center;
@@ -58,6 +62,7 @@ a {
 
 ul li a:hover {
   font-weight: bold;
+  opacity: 1;
 }
 
 section, p {
