--- a/Projeto 03/style.css
+++ b/Projeto 03/style.css
@@ -1,9 +1,51 @@
-h1 {
-  font-family: 'Archivo', sans-serif;
-  font-weight: bold;
-}
-
 body {
   font-family: 'Poppins', sans-serif;
+  
+  background: #E5E5E5;
 }
 
+body::before {
+  content: '';
+  width: 100%;
+  height: 368px;
+  background: #121214;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: -1;
+}
+
+.page {
+  width: 736px;
+  margin: 0 auto;
+}
+
+header {
+  width: 319px;
+
+  margin-top: 74px;
+}
+
+header h1 {
+  font-family: 'Archivo', sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+  color: #FFFF;
+  line-height: 42px;
+}
+
+header p {
+  font-size: 16px;
+  line-height: 26px;
+  color: #42D3FF;
+}
+
+form {
+  margin-top: 38px;
+  background: #FAFAFC;
+  border-radius: 8px;
+  min-height: 300px;
+}
+ 
