--- a/Projeto 03/style.css
+++ b/Projeto 03/style.css
@@ -61,6 +61,10 @@ form {
   min-height: 300px;
 
   padding: 64px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 form fieldset {
@@ -141,6 +145,19 @@ fieldset legend {
   background-repeat: no-repeat;
   background-position: right 24px top 50%;
 }
+
+.col-3 {
+  display: flex;
+  gap: 20px;
+}
+
+.col-3 > div:nth-child(1) {
+  width: 100%;
+}
+
+
+
+
 
 
  
