--- a/Projeto 03/style.css
+++ b/Projeto 03/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body, input, button, select, textarea {
+body, input, select, textarea {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -57,7 +57,7 @@ header p {
 form {
   margin-top: 38px;
   background: #FAFAFC;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   min-height: 300px;
 
   padding: 64px;
@@ -193,6 +193,42 @@ fieldset legend {
 
 .checkbox-wrapper input:focus + label::before {
   outline: 2px solid black;
+}
+
+footer {
+  background: #F0F0F4;
+
+  height: 136px;
+
+  display: flex;
+  flex-direction: column;
+
+  padding: 40px 64px;
+
+  margin-bottom: 100px;
+
+  border-top: 1px solid #D6D6D6;
+  border-bottom: 0 0 8px 8px;
+}
+
+footer .button {
+  height: 56px;
+  background: #04D361;
+  border-radius: 8px;
+  border: none;
+
+  font-family: 'Archivi';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  color: #FFFFFF;
+
+  cursor: pointer;
+}
+
+footer .button:hover {
+  background: #02ba55;
 }
 
 
