--- a/Projeto 04/style.css
+++ b/Projeto 04/style.css
@@ -77,6 +77,10 @@ ul li {
   gap: 3.8rem;
 }
 
+ul li + li {
+  margin-top: 3.2rem;
+}
+
 ul li span {
   font-weight: 800;
   font-size: 7.2rem;
@@ -85,3 +89,27 @@ ul li span {
 
   color: #090039;
 }
+
+ /* midia queries */
+ @media (min-width: 700px) {
+  body {
+    padding: 8rem;
+  }
+  main {
+    max-width: 1020px;
+    display: flex;
+    gap: 10rem;
+
+    
+  }
+
+  main > div {
+    max-width: 484px;
+  }
+
+  ul li {
+    gap: 5.3rem;
+    max-width: 450px;
+    align-items: center;
+  }
+ } 
