--- a/Projeto 05/style.css
+++ b/Projeto 05/style.css
@@ -114,3 +114,34 @@ header h1 {
   display: inline-flex;
   align-items: center;
 }
+
+header {
+  animation: topdown 700ms;
+}
+
+main {
+  animation: downtop 700ms 350ms backwards;
+}
+
+@keyframes topdown {
+  0% {
+    opacity: 0;
+    transform: translateY(-15px);
+  }
+
+  100% {  
+    opacity: 1;
+    transition: translateY(0);
+  }
+}
+
+@keyframes downtop {
+  0% {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
