--- a/Projeto 05/style.css
+++ b/Projeto 05/style.css
@@ -30,11 +30,15 @@ body {
 .page {
   max-width: 33rem;
   margin: 0 auto;
+
+  padding-bottom: 50px;
 }
 
 main {
   display: grid;
   gap: 3.2rem;
+
+  animation: downtop 700ms 350ms backwards;
 }
 
 img {
@@ -47,6 +51,8 @@ header {
   font-family: var(--ff-heading);
 
   text-align: center;
+
+  animation: topdown 700ms;
 }
 
 header p {
@@ -91,7 +97,7 @@ header h1 {
   left: 2.8rem;
 
   font-weight: 800;
-  font-size: var(--fs-heading);
+  font-size: 4rem;
 
   display: flex;
   flex-direction: column;
@@ -115,14 +121,6 @@ header h1 {
   align-items: center;
 }
 
-header {
-  animation: topdown 700ms;
-}
-
-main {
-  animation: downtop 700ms 350ms backwards;
-}
-
 @keyframes topdown {
   0% {
     opacity: 0;
@@ -143,5 +141,43 @@ main {
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (min-width: 700px) {
+  :root {
+    --fs-heading: 5.6rem;
+  }
+  
+  .page {
+    max-width: 170rem;
+    padding: 0 5rem;
+  }
+
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 930px) {
+
+  main {
+    display: grid;
+    grid-template-areas: "A B B" "C C D";
+  }
+
+  main div:nth-child(1) {
+    grid-area: A;
+  }
+  main div:nth-child(2) {
+    grid-area: B;
+  }
+  
+  main div:nth-child(3) {
+    grid-area: C;
+  }
+
+  main div:nth-child(4) {
+    grid-area: D;
   }
 }
