--- a/Projeto 05/style.css
+++ b/Projeto 05/style.css
@@ -16,7 +16,8 @@
 
   font-size: 62.5%;
   --fs-body: 1.6rem;
-  --fs-heading: 4rem
+  --fs-heading: clamp(4rem, 1rem + 5vw, 5.6rem);
+  --fs-heading-sm: clamp(3rem, 0.5rem + 3vw, 4rem);
 }
 
 body {
@@ -28,7 +29,8 @@ body {
 }
 
 .page {
-  max-width: 33rem;
+  max-width: clamp(33rem, 30rem + 60vw, 117rem);
+  padding: 0 5rem;
   margin: 0 auto;
 
   padding-bottom: 50px;
@@ -99,7 +101,7 @@ header h1 {
   left: 2.8rem;
 
   font-weight: 800;
-  font-size: 4rem;
+  font-size: var(--fs-heading-sm);
 
   display: flex;
   flex-direction: column;
@@ -147,14 +149,10 @@ header h1 {
 }
 
 @media (min-width: 700px) {
-  :root {
-    --fs-heading: 5.6rem;
-  }
-  
-  .page {
+  /* .page {
     max-width: 170rem;
     padding: 0 5rem;
-  }
+  } */
 
   main {
     grid-template-columns: 1fr 1fr;
