--- a/Desafios/04/style.css
+++ b/Desafios/04/style.css
@@ -26,7 +26,7 @@ body {
   margin: 0 auto;
 }
 
-header {
+header .logo {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,6 +36,7 @@ header {
   background-color: var(--bg-header);
 
   margin-bottom: 1.4rem;
+  padding-bottom: 2.9rem;
 }
 
 header img {
@@ -45,7 +46,6 @@ header img {
 
 header h1 {
   width: 100%;
-  height: fit-content;
   text-align: center;
 
   font-family: var(--fm-heading);
@@ -61,5 +61,5 @@ header h1 {
 
   text-transform: uppercase;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  padding-bottom: 2.9rem;
+  padding: 0.8rem 0
 }
