--- a/Desafios/04/style.css
+++ b/Desafios/04/style.css
@@ -47,12 +47,17 @@ header .logo {
 header img {
   width: 137px;
   height: 137px;
+
+  animation: fromleft 2s forwards;
+}
+
+.wrapper-h1 {
+  width: 100%;
+  text-align: center;
+  background-color: #CBC0D3;
 }
 
 header h1 {
-  width: 100%;
-  text-align: center;
-
   font-family: var(--fm-heading);
   font-weight: 400;
   font-size: 4rem;
@@ -62,11 +67,13 @@ header h1 {
   letter-spacing: 0.05em;
 
   color: var(--fc-heading);
-  background-color: #CBC0D3;
+ 
 
   text-transform: uppercase;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  padding: 0.8rem 0
+  padding: 0.8rem 0;
+
+  animation: fromrigth 2s forwards;
 }
 
 main {
@@ -84,26 +91,35 @@ main p {
 }
 
 .cards {
+  max-width: 56.438rem;
   margin-top: 6.3rem;
   display: grid;
   gap: 3.2rem;
 
-  grid-template-areas: "A B" "C D";
+  grid-template-areas: "A B" 
+  "D B" 
+  "D C";
 }
 
-.cards .card:nth-child(1) {
+.cards .card {
+  max-width: 13.75rem;
+  height: auto;
+}
+
+
+.cards div:nth-child(1) {
   grid-area: A;
 }
 
-.cards .card:nth-child(2) {
+.cards div:nth-child(2) {
   grid-area: B;
 }
 
-.cards .card:nth-child(3) {
+.cards div:nth-child(3) {
   grid-area: C;
 }
 
-.cards .card:nth-child(4) {
+.cards div:nth-child(4) {
   grid-area: D;
 }
 
@@ -135,4 +151,42 @@ main p {
   font-size: 2rem;
   color: #4A4E69;
   letter-spacing: 0.5;
+
+  animation: topdown 2s forwards;
+}
+
+@keyframes fromrigth {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fromleft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes topdown {
+  0% {
+    opacity: 0;
+    transform: translateY(-17px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
