--- a/Stage 04 DOM/Jogo-adivinhacao/style.css
+++ b/Stage 04 DOM/Jogo-adivinhacao/style.css
@@ -14,8 +14,12 @@ body {
 
   display: grid;
   place-items: center;
-
   height: 100vh;
+
+}
+
+body, button, input {
+  font-family: "DM Sans", sans-serif;
 }
 
 main {
@@ -26,4 +30,24 @@ main {
 
   width: min(42.8rem, 90%);
   margin-top: -12rem;
+
+  text-align: center;
+}
+
+h1 {
+  font-family: "Mońtserrat", sans-serif;
+  font-size: 2.4rem;
+  margin-bottom: 1.6rem;
+}
+
+h1, p {
+  color: #34355B;
+}
+
+p {
+  opacity: .8;
+}
+
+form {
+  margin-top: 4.8rem;
 }
