--- a/Stage 04 DOM/Jogo-adivinhacao/style.css
+++ b/Stage 04 DOM/Jogo-adivinhacao/style.css
@@ -22,6 +22,24 @@ body, button, input {
   font-family: "DM Sans", sans-serif;
 }
 
+button {
+  background-color: #7879F1;
+  color: white;
+  font-weight: bold;
+  border-radius: 0 .4rem .4rem 0;
+  cursor: pointer;
+
+  transition: background .3s;
+}
+
+button:hover {
+    background-color: #6d6ddc;
+}
+
+.hide {
+  display: none;
+}
+
 main {
   background: #FFFFFF;
   box-shadow: 0 .2rem .4rem rgba(0, 0, 0, 0.1);
@@ -33,6 +51,8 @@ main {
 
   text-align: center;
 }
+
+/* screen1 */
 
 h1 {
   font-family: "Mońtserrat", sans-serif;
@@ -50,4 +70,32 @@ p {
 
 form {
   margin-top: 4.8rem;
+  display: flex;
+
+  display: flex;
+  justify-content: center;
+}
+
+input, button {
+  border: 0;
+  padding: 1.6rem;
+}
+
+input {
+  background-color: #DCE2E9;
+  width: 6rem;
+  border-radius: .4rem 0 0 .4rem;
+}
+
+/* screen2 */
+
+h2 {
+  font-size: 2.4rem;
+  font-weight: normal;
+
+  margin-bottom: 3.3rem;
+}
+
+.screen2 button {
+  border-radius: .4rem;
 }
