--- a/Stage 04 DOM/Calculadora-IMC/style.css
+++ b/Stage 04 DOM/Calculadora-IMC/style.css
@@ -121,3 +121,42 @@ form button {
 button:hover {
   background: var(--bg-button-hover);
 }
+
+/* modal */
+/* .modal-wrapper.open {
+  opacity: 1;
+  visibility: visible;
+} */
+
+.modal-wrapper {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.7);
+
+  display: grid;
+  place-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal {
+  position: relative;
+}
+
+.modal button {
+  background: none;
+  border: none;
+
+  position: absolute;
+  top: 1.6rem;
+  right: 1.6rem;
+
+  cursor: pointer;
+  
+  transition: transform .3s;
+}
+
+.modal button:hover {
+  transform: scale(1.1);
+}
