displaying result in modal

--- a/Stage 04 DOM/Calculadora-IMC/style.css
+++ b/Stage 04 DOM/Calculadora-IMC/style.css
@@ -123,10 +123,10 @@ button:hover {
 }
 
 /* modal */
-/* .modal-wrapper.open {
+.modal-wrapper.open {
   opacity: 1;
   visibility: visible;
-} */
+}
 
 .modal-wrapper {
   position: absolute;
