--- a/Desafios/Biscoito da sorte/style.css
+++ b/Desafios/Biscoito da sorte/style.css
@@ -18,6 +18,8 @@
 body {
   font-size: 1.6rem;
   background: linear-gradient(45deg, #190361 0%, #BB00FF 100%); 
+  animation: gradient 10s ease infinite;
+  background-size: 200% 200%;
 }
 
 .open {
@@ -105,6 +107,8 @@ body {
   }
 }
 
-@media (min-width: 400px) {
-  
+@keyframes gradient {
+	0% { background-position: 0% 50%; }
+	50% { background-position: 100% 50%; }
+	100% { background-position: 0% 50%; }
 }
