--- a/Stage 05/Focus Timer/style.css
+++ b/Stage 05/Focus Timer/style.css
@@ -20,6 +20,14 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
   font-family: 'Roboto', sans-serif;
+
+  display: grid;
+  min-height: 100vh;
+}
+
+main {
+  justify-self: center;
+  align-self: end;
 }
 
 button {
@@ -40,6 +48,7 @@ button img {
   font-size: clamp(4rem, 4rem + 10vw, 8.8rem);
 
   display: flex;
+  margin-bottom: 1.6rem;
 }
 
 #controls {
@@ -54,4 +63,11 @@ button img {
 
   width: clamp(10rem, 10rem + 30vw, 22.8rem);
   height: clamp(8rem, 5rem + 10vw, 10.8rem);
+}
+
+footer {
+  justify-self: end;
+  align-self: end;
+
+  padding: 0 4rem 3.2rem 0;
 }
