--- a/Desafios/Focus Timer 2.0/style.css
+++ b/Desafios/Focus Timer 2.0/style.css
@@ -7,12 +7,12 @@
 :root {
   font-size: 62.5%;
 
-  --bg-body: #FFFFFF;
+  --bg-body: #ffffff;
 }
 
 body {
   font-size: 1.6rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 
   background: var(--bg-body);
   height: 100vh;
@@ -25,8 +25,9 @@ main {
   grid-template-columns: 32.1rem 30.8rem;
   gap: 19.2rem;
   max-width: 82.1rem;
+  padding: 0 2rem;
 }
- 
+
 #countdown {
   max-width: 32.1rem;
 
@@ -38,7 +39,7 @@ main {
 }
 
 #timer {
-  font-size: 12.7rem;
+  font-size: clamp(12.6rem, 8rem + 1vw, 8.8rem);
   line-height: 14.8rem;
   color: #323238;
   display: flex;
@@ -54,7 +55,7 @@ main {
   background: none;
   cursor: pointer;
 
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
 
 .controls button:hover {
@@ -62,26 +63,52 @@ main {
 }
 
 .controls-sound {
-  width: fit-content;
+  max-width: fit-content;
   display: grid;
-  grid-template-areas: 'colA colB';
+  grid-template-areas: "colA colB";
   gap: 3.2rem;
 }
 
 .card-sound {
   height: 11.8rem;
   width: 11.2rem;
-  background-color: #E1E1E6;
   border-radius: 2.4rem;
+  background-color: #e1e1e6;
 
   display: grid;
   place-items: center;
   border: none;
 
   cursor: pointer;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
 
 .controls-sound button:hover {
   transform: scale(1.1);
+}
+
+.card-blue {
+  background-color: #02799d;
+}
+
+@media (max-width: 700px) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 4rem;
+    place-items: center;
+  }
+
+  #timer {
+    font-size: 9rem;
+  }
+
+  .controls img {
+    width: 3rem;
+  }
+
+  .card-sound {
+    height: 9.8rem;
+    width: 9.2rem;
+  }
 }
